tests/compile_fail/borrow_mut/unknown_field_attr_arg.rs
#[derive(derive_more::BorrowMut)]
struct Foo(#[borrow_mut(baz)] i32);

fn main() {}
